--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(60deg, #362d42, #4f7468);
+  background-size: cover;
+  height: 100%;
 }
 
 code {
