--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(60deg, #362d42, #4f7468);
-  background-size: cover;
-  height: 100%;
+  background-image: linear-gradient(60deg, #362d42, #4f7468, #362d42);
 }
 
 code {
