--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,24 @@ body {
   background-image: linear-gradient(60deg, #362d42, #4f7468, #362d42);
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #4f7468;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #362d42;
+  border-radius: 10px;
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
