--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(60deg, #362d42, #4f7468, #362d42);
+  background-image: linear-gradient(80deg, #362d42, #4f7468, #362d42);
 }
 
 /* width */
@@ -18,13 +18,13 @@ body {
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px #4f7468;
-  border-radius: 10px;
+  /* border-radius: 0px; */
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #362d42;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 
