--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(80deg, #362d42, #4f7468, #362d42);
+  /* background-image: linear-gradient(80deg, #362d42, #4f7468, #362d42); */
+  background-color: black;
 }
 
 /* width */
