design and style animation update

--- a/src/Pages/Home/AboutSection/AboutSection.css
+++ b/src/Pages/Home/AboutSection/AboutSection.css
@@ -2,3 +2,12 @@
     border-left: 3px solid white;
     padding-left: 20px;
 }
+
+.cardShadow{
+    transition: all 0.4s;
+    cursor: pointer;
+}
+
+.cardShadow:hover {
+    box-shadow: 5px 5px 6px #44b2dd;
+}
