--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-image: linear-gradient(80deg, #362d42, #4f7468, #362d42); */
-  background-color: black;
+  background-color: #221f1f;
 }
 
 /* width */
