--- a/src/Pages/Home/ProfileBio/ProfileBio.css
+++ b/src/Pages/Home/ProfileBio/ProfileBio.css
@@ -1,3 +1,8 @@
+.btnanim {
+    box-shadow: 0px 0px 15px #66caf1;
+    transition: all 0.2s;
+    animation: btnbg 1.0s ease-in infinite ;
+}
 .commonbtn:hover {
     box-shadow: 0px 0px 15px #66caf1;
     transition: all 0.2s;
@@ -7,6 +12,10 @@
 .dbimage{
     border: 3px solid #ffffff;
     animation: dbimage 6s ease-in-out infinite ;
+}
+
+.doticon{
+    animation: dbimage 2s ease-in-out infinite ;
 }
 
 .floatingText{
