--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.pageBacgkround{
+  background-image: linear-gradient(45deg green red );
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
