--- a/src/Pages/Home/ProfileBio/ProfileBio.css
+++ b/src/Pages/Home/ProfileBio/ProfileBio.css
@@ -23,6 +23,10 @@
     animation: textanimation 1s steps(5) infinite;
 }
 
+.hoverProfile{
+    border-radius: 78% 22% 25% 25% / 75% 25% 25% 25%;
+}
+
 @keyframes textanimation {
 	0%{
 		width: 0ch;
