image optimize and changes

--- a/src/Pages/Home/ContactForm/ContactForm.css
+++ b/src/Pages/Home/ContactForm/ContactForm.css
@@ -15,7 +15,7 @@
 } */
 
 .contactLetter{
-    background-image: url(../../../assets/contactLetter.svg);
+    background-image: url(../../../assets/contactLetter.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
