--- a/src/Pages/Home/ContactForm/ContactForm.css
+++ b/src/Pages/Home/ContactForm/ContactForm.css
@@ -18,5 +18,6 @@
     background-image: url(../../../assets/contactLetter.jpg);
     background-position: center;
     background-size: cover;
+    width: 100%;
     background-repeat: no-repeat;
 }
