--- a/src/Layout/Main.css
+++ b/src/Layout/Main.css
@@ -9,7 +9,7 @@
     background: #193841;
     border-radius: 50px;
     cursor: pointer;
-    box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.135);
     transition: all 0.3s ease-out;
   }
 
