--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
   background-repeat: no-repeat;
 }
 
+.detailsBg{
+  background-color: rgba(0, 0, 0, 0.445);
+  padding: 10px;
+  border-radius: 20px;
+}
+
 .mainHomebg{
   background-image: url(../src//assets/bgimgshape2.png);
 background-size: 100vw;
