--- a/src/Pages/Home/Projects/Projects.css
+++ b/src/Pages/Home/Projects/Projects.css
@@ -6,7 +6,7 @@
 
 .cardOverFLowDown{
     background-color: rgba(6, 47, 48, 0.655);
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(2px);
     transition: all 0.6s;
     
 }
@@ -21,13 +21,13 @@
 
 .mainCard:hover .cardOverFLowDown {
     top: 270px;
-    color: wheat;
+    color: rgb(23, 18, 10);
 }
 
 .cardOverFLowUp{
-    top: -270px;
-    background-color: rgba(6, 47, 48, 0.655);
-    backdrop-filter: blur(30px);
+    top: -570px;
+    /* background-color: rgba(6, 47, 48, 0.655); */
+    backdrop-filter: blur(0px);
     transition: all 0.6s;
 }
 
