--- a/src/Layout/Main.css
+++ b/src/Layout/Main.css
@@ -27,3 +27,16 @@
     font-size: 16px;
     text-transform: uppercase;
 }
+
+.github-bulb{
+    
+    animation: git_bulb 2s infinite ease-in-out ;
+}
+@keyframes git_bulb {
+    0%{
+        box-shadow: 0px 0px 10px 20px #23baf5;
+    }
+    100%{
+        box-shadow: none;
+    }
+}
