--- a/src/Layout/Main.css
+++ b/src/Layout/Main.css
@@ -34,9 +34,14 @@
 }
 @keyframes git_bulb {
     0%{
-        box-shadow: 0px 0px 10px 20px #23baf5;
+        filter: drop-shadow(0px 0px 0px black);
+    }
+    0%{
+        /* box-shadow: 0px 0px 10px 20px #23baf5; */
+        /* filter: drop-shadow(0px 0px  50px #23baf5); */
+        text-shadow: 0px 0px 10px 20px #23baf5;
     }
     100%{
-        box-shadow: none;
+        filter: drop-shadow(0px 0px 0px black);
     }
 }
