--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .commentsbg{
-  background-image:  linear-gradient(0deg, #0e2025f4, #0e2025f4), url('https://i.ibb.co/hyHDm0B/6600392-3325712.jpg');
+  background-image:  linear-gradient(0deg, #0e2025f4, #0e2025f4), url('../src/assets/bgblogdetail.jpg');
   /* background-image:  url('https://i.ibb.co/hyHDm0B/6600392-3325712.jpg'); */
   background-position: center;
   background-size: cover;
