--- a/src/Pages/Home/ProfileBio/ProfileBio.css
+++ b/src/Pages/Home/ProfileBio/ProfileBio.css
@@ -89,12 +89,12 @@
     }
     50%{
         box-shadow: 0px 0px 100px 20px #0db5f7;
-        left: 700px;
+        left: 70%;
         width: 100px;
         opacity: 0;
     }
     75%{
-        left: 700px;
+        left: 70%;
         width: 100px;
         opacity: 0;
         box-shadow: 0px 0px 300px 80px #0db5f7;
