--- a/src/Layout/Main.css
+++ b/src/Layout/Main.css
@@ -44,3 +44,30 @@
         filter: drop-shadow(0px 0px 0px black);
     }
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+    width: 80px;
+    aspect-ratio: 1;
+    display: grid;
+  }
+  .loader:before,
+  .loader:after {
+    content: "";
+    grid-area: 1/1;
+    border-radius: 50%;
+    background: #23baf5;
+    -webkit-mask:repeating-linear-gradient(#000 0 10px,#0000 0 20px);
+  }
+  .loader:after {
+    -webkit-mask:repeating-linear-gradient(#0000 0 10px,#000 0 20px);
+    animation: l36 1.5s infinite;
+  }
+  @keyframes l36 {
+    0%,
+    10%  {transform: rotate(0)      translate(0)}
+    35%  {transform: rotate(0)      translate(100%)}
+    66%  {transform: rotate(180deg) translate(100%)}
+    90%,
+    100% {transform: rotate(180deg) translate(0) }
+  }
