fix the loading

--- a/src/Layout/Main.css
+++ b/src/Layout/Main.css
@@ -46,28 +46,19 @@
 }
 
 /* HTML: <div class="loader"></div> */
+/* HTML: <div class="loader"></div> */
+/* HTML: <div class="loader"></div> */
 .loader {
-    width: 80px;
-    aspect-ratio: 1;
-    display: grid;
-  }
-  .loader:before,
-  .loader:after {
-    content: "";
-    grid-area: 1/1;
-    border-radius: 50%;
-    background: #23baf5;
-    -webkit-mask:repeating-linear-gradient(#000 0 10px,#0000 0 20px);
-  }
-  .loader:after {
-    -webkit-mask:repeating-linear-gradient(#0000 0 10px,#000 0 20px);
-    animation: l36 1.5s infinite;
-  }
-  @keyframes l36 {
-    0%,
-    10%  {transform: rotate(0)      translate(0)}
-    35%  {transform: rotate(0)      translate(100%)}
-    66%  {transform: rotate(180deg) translate(100%)}
-    90%,
-    100% {transform: rotate(180deg) translate(0) }
-  }
+  width: 40px;
+  height: 40px;
+  --c:no-repeat linear-gradient(#23baf5 0 0);
+  background: var(--c),var(--c),var(--c),var(--c);
+  background-size: 21px 21px;
+  animation: l5 1.5s infinite cubic-bezier(0.3,1,0,1);
+}
+@keyframes l5 {
+ 0%   {background-position: 0    0,100% 0   ,100% 100%,0 100%}
+ 33%  {background-position: 0    0,100% 0   ,100% 100%,0 100%;width:60px;height: 60px}
+ 66%  {background-position: 100% 0,100% 100%,0    100%,0 0   ;width:60px;height: 60px}
+ 100% {background-position: 100% 0,100% 100%,0    100%,0 0   }
+}
